src/objects/TMN_Contract__c.object
<CustomObject>
    <description>CAMBRIDGE CONTRACT</description>
    <fields>
        <fullName>AdditionalGrowth__c</fullName>
        <label>CL Additional Growth</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AdditionalPermitsDetail__c</fullName>
        <label>CL Additional Permits Detail</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AdditionalPermits__c</fullName>
        <label>CL Additional Permits</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agency_FY_End__c</fullName>
        <formula>TEXT(ContractingParty__r.FY_End__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency FY End</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnualFundingLimit__c</fullName>
        <label>CL Annual Funding Limit</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>App1NextReviewDate__c</fullName>
        <formula>Termination_Date__c -29</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NextReviewDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>App_1_Compliance_Sign_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <label>z1 Sign Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>App_2_Compliance_Sign_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <label>z 2 Sign Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>App_3_Compliance_Sign_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <label>z 3 Sign Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApprovalStage__c</fullName>
        <label>Approval Stage</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 4</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approver4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver5__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 5</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approver5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver6__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 6</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approver6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approver_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approver_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approver_3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AuditReqsDetail__c</fullName>
        <label>CI Audit Requirements Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AuditRequirementsYN__c</fullName>
        <label>CI Audit Requirements Y/N</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Audit_Requirements__c</fullName>
        <label>CI Audit Requirements</label>
        <picklist>
            <picklistValues>
                <fullName>A-133</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stand Alone Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UFR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CL_AnnualFundingLimitDetail__c</fullName>
        <label>CL Annual Funding Limit Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CL_CoveredByLimit__c</fullName>
        <label>CL Covered by Limit</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CL_DatesCorrectDetail__c</fullName>
        <label>CL Dates Correct Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CL_Payback_ReviewClause__c</fullName>
        <label>CL Payback/Review Clause</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CL_SubcontractingTermsDetail__c</fullName>
        <label>CL Subcontracting Terms Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CancelledReason__c</fullName>
        <label>Cancelled Reason</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Non-Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rates Do Not Support Service Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost Bid to Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchaser Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Converting Res to Non-Res</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CheckListComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete Check List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CompanyNameCorrectDetail__c</fullName>
        <label>CL Company Name Correct Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CompanyNameCorrect__c</fullName>
        <label>CL Company Name Correct</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CompleteAssignedApprovers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete Assigned Approvers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ComplianceApproverNumber__c</fullName>
        <formula>CASE($User.Id, 
Approver_1__r.Id , 1,
 Approver_2__r.Id , 2,
 Approver_3__r.Id , 3,
 Approver4__r.Id , 4,
 Approver5__r.Id , 5,
 Approver6__r.Id , 6,
 Approver7__r.Id , 7,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compliance Approver Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContractID__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>ContractID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractingParty__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Issuing Agency</label>
        <referenceTo>IssuingAgency__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CostReimbursementDetail__c</fullName>
        <label>CI Cost Reimbursement Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CostReportRequiredYN__c</fullName>
        <label>CI Cost Report Required Y/N</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CostReport__c</fullName>
        <label>CI Cost Report Required</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed Fee for Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reimbursement Rate Setting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiated Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retrospective Settle-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospective Rate Setting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CriticalIndicatorsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete Critical Indicators</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DatesCorrect__c</fullName>
        <label>CL Dates Correct</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Day_since_Start__c</fullName>
        <formula>today()- Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day since Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysRemaining__c</fullName>
        <formula>Termination_Date__c -today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DetailsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date_CI_Audit_Requirements__c</fullName>
        <label>Due Date Audit Requirements</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date_Cost_Report_Required__c</fullName>
        <label>Due Date Cost Report Required</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date_Other__c</fullName>
        <label>Due Date Other</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date_Outcome_Requirements__c</fullName>
        <label>Due Date Outcome Requirements</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalContact__c</fullName>
        <inlineHelpText>Contact Name, Address, Phone # (Contractor)</inlineHelpText>
        <label>External Contact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FrequencyOfVisitsDetail__c</fullName>
        <label>CI Frequency of Visits Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FrequencyOfVisitsYN__c</fullName>
        <label>CI Frequency of Visits Y/N</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FullyExecutedContractUploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fully Executed Contract Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <label>Funding Type</label>
        <picklist>
            <picklistValues>
                <fullName>Medicaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>County Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LN_ContractTermNoNotice__c</fullName>
        <label>LN Contract Term w/o Notice</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LN_LiabilityInsuranceExceedLimits__c</fullName>
        <label>LN Liability Insurance Exceed Limits</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LN_ManageCareRiskSharing__c</fullName>
        <label>LN Manage Care Risk Sharing</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LN_new_payor_or_a_new_service__c</fullName>
        <label>LN new payor or a new service?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LegalEntity__c</fullName>
        <label>Legal Entity</label>
        <picklist>
            <controllingField>State__c</controllingField>
            <picklistValues>
                <fullName>Alliance Human Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Advocacy Services, LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois Mentor Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institute for Family Centered Services, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts Mentor LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor Maryland, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Mentor Healthcare, LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Mentor Services, LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ohio Mentor, Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM Connecticut Community Services, LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM New Jersey, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REM New Jersey Properties, Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Carolina Mentor, Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IFCS (Institute for Family Centered Services, Inc.)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LegalReviewRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal Review Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MentorRegionOfficeProgramName__c</fullName>
        <label>Mentor Region/Office/Program Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_value_type__c</fullName>
        <label>Number of value type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_Group__c</fullName>
        <label>Operating Group</label>
        <picklist>
            <picklistValues>
                <fullName>Cambridge</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OtherSpecialRequirementsYN__c</fullName>
        <label>CI Other special requirementsY/N</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OutcomeRequirementsDetail__c</fullName>
        <label>CI Outcome Requirements Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OutcomeRequirementsYN__c</fullName>
        <label>CI Outcome Requirements Y/N</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PerformanceBasedContractYN__c</fullName>
        <label>CI Performance Based Contract Y/N</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PerformanceDetail__c</fullName>
        <label>CI Performance Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PersonnelCredentialRequirementsDetail__c</fullName>
        <label>CI Personnel Credential Reqs Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Personnel_CredentialRequirementsYN__c</fullName>
        <label>CI Personnel/Credential Requirements Y/N</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Population__c</fullName>
        <label>Population</label>
        <picklist>
            <picklistValues>
                <fullName>IDD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children and Families</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Contract</label>
        <referenceTo>TMN_Contract__c</referenceTo>
        <relationshipName>Previous_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProviderRequiredTrainingDetail__c</fullName>
        <label>CI Provider Required Training Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProviderRequiredTrainingYN__c</fullName>
        <label>CI Provider Required Training Y/N</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProviderRequiredTraining__c</fullName>
        <label>CI Provider Required Training</label>
        <picklist>
            <picklistValues>
                <fullName>Direct Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster Parents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RateChangeBudget__c</fullName>
        <label>CL Rate Change vs. Budget</label>
        <picklist>
            <picklistValues>
                <fullName>Lower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RateChangeLastContract__c</fullName>
        <inlineHelpText>If the rate is &apos;Lower&apos; the VPO field is required for notification</inlineHelpText>
        <label>CL Rate Change vs. Last Contract</label>
        <picklist>
            <picklistValues>
                <fullName>Lower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate_Structure__c</fullName>
        <label>Rate Structure</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Diem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billable Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Session</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReadyForApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regions_Geography_Served__c</fullName>
        <label>Regions/Geography Served</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reminder_Days_Audit_Requirements__c</fullName>
        <label>z Reminder Days Audit Requirements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reminder_Days_Cost_Report__c</fullName>
        <label>z Reminder Days Cost Report</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reminder_Days_Other__c</fullName>
        <label>z Reminder Days Other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reminder_Days_Outcome__c</fullName>
        <label>z Reminder Days Outcome</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReportingRequirementsDetail__c</fullName>
        <label>CI Reporting Requirements Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ReportingRequirementsYN__c</fullName>
        <label>CI Reporting Requirements Y/N</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReportingRequirements__c</fullName>
        <label>CI Reporting Requirements</label>
        <picklist>
            <picklistValues>
                <fullName>Annual Audits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incident Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly/Quarterly Progress Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ServiceChange__c</fullName>
        <inlineHelpText>If Services have &apos;Increased&apos; the VPO field is required for notification</inlineHelpText>
        <label>CL Service Change Vs Last Contract</label>
        <picklist>
            <picklistValues>
                <fullName>Decreased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ServiceDocumentationDetail__c</fullName>
        <label>CI Service Documentation Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ServiceDocumentationYN__c</fullName>
        <label>CI Service Documentation Y/N</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ServiceDocumentation__c</fullName>
        <label>CI Service Documentation</label>
        <picklist>
            <picklistValues>
                <fullName>Contact Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Progress Notes</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Service_Line__c</fullName>
        <label>Service Line</label>
        <picklist>
            <picklistValues>
                <fullName>ABI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARY Group Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARY Host Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARY Periodic (Other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Intervention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDD Group Home/ICF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDD Host Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDD Periodic (Other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDD Supported Living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outpatient Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schools</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SpecialRequirementsDetail__c</fullName>
        <label>CI Other Requirements Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SpendDown__c</fullName>
        <label>Spend Down</label>
        <picklist>
            <picklistValues>
                <fullName>Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clients (Clients,Cap,Slots)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dollars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SpendingRequirementsDetails__c</fullName>
        <label>CI Spending Requirements Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>